Generated tests whit MockMv in BookController